Fix javadoc generating, move supertypes list to the code